Not expecting clean run - need public html.

--- a/www/aws-app-read-write.html
+++ b/www/aws-app-read-write.html
@@ -50,15 +50,25 @@ Read/Write demo app for the AWS Lambda API.
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="https://sdk.amazonaws.com/js/aws-sdk-2.4.12.min.js"></script>
-    <script src="aws-lib.js"></script>
+	<script src="telia-iot-config.js"></script>
+	<script src="telia-iot-lib.js"></script>
+	<script src="aws-lib.js"></script>
     <script src="aws-config.js"></script>
+
 
 	<script>
 	function initialise()
 	{
-		initializeAWS()
+		console.log("initialize on read-write");
+		initializeTelia();
+		//initializeAWS();
+
 	}
 
+	function intializeTelia()
+	{
+		evothings.telia.iot.initialize(evothings.telia.iot.config)
+	}
 	function initializeAWS()
 	{
 		// TODO: Update aws-config.js with your access keys.
