--- a/www/aws-app-read.html
+++ b/www/aws-app-read.html
@@ -53,6 +53,7 @@ Read demo app for the AWS Lambda API.
 	<!--<script src="aws-iot-sdk-browser-bundle.js"></script>-->
     <script src="aws-lib.js"></script>
     <script src="aws-config.js"></script>
+	<script src="telia-iot-lib.js"></script>
 
 
 	<script>
@@ -67,7 +68,7 @@ Read demo app for the AWS Lambda API.
 	{
 		// TODO: Update aws-config.js with your access keys.
 		evothings.aws.initialize(evothings.aws.config);
-		evothings.a
+		//evothings.a
 	}
 
 	function startReading()
